manifests/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: resources-shield
  labels:
    app: resources-shield
