manifests/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: resources-shield-svc
  namespace: resources-shield
spec:
  ports:
    - port: 443
      targetPort: 8443
  selector:
    app: resources-shield-app
