manifests/vwc.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: resources-shield-validating-webhook
webhooks:
  - name: cluster-resources-shield.resources-shield.com
    sideEffects: None
    admissionReviewVersions: ["v1"]
    failurePolicy: Fail
    rules:
      - apiGroups: ["*"]
        apiVersions: ["*"]
        operations: ["DELETE"]
        resources:
          - namespaces
          - clusterroles
          - clusterrolebindings
        scope: "Cluster"
    clientConfig:
      service:
        name: resources-shield-svc
        namespace: resources-shield
        path: "/validate"
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURHVENDQWdHZ0F3SUJBZ0lVY2M2bFN0MitUK0NuS3l2eEZLdWtIWEpuR3Frd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0hERWFNQmdHQTFVRUF3d1JVbVZ6YjNWeVkyVnpVMmhwWld4a1EwRXdIaGNOTWpRd09USXlNakl4TVRNNApXaGNOTWprd09USXhNakl4TVRNNFdqQWNNUm93R0FZRFZRUUREQkZTWlhOdmRYSmpaWE5UYUdsbGJHUkRRVENDCkFTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBSitpeC8vbDkyTzQyZ2JmNGlKd3lYMWYKZ3BwK2Qxb3M3NjVzc3piYTlCeHJ2bkhOOUR6K2pJTWM4N3FiUTZ5Vkl6dnRkUjBIOXN2TStsTFpnbkJna3pOMQpnaHB5RGJ3aEFw [...]
  # Webhook for namespaced resources within the operator's namespace
  - name: namespaced-resources-shield.resources-shield.com
    sideEffects: None
    admissionReviewVersions: ["v1"]
    failurePolicy: Fail
    namespaceSelector:
      matchLabels:
        app: resources-shield
    rules:
      - apiGroups: ["*"]
        apiVersions: ["*"]
        operations: ["DELETE"]
        resources:
          - deployments
          - services
          - validatingwebhookconfigurations
          - serviceaccounts
          - configmaps
          - secrets
        scope: "Namespaced"
    clientConfig:
      service:
        name: resources-shield-svc
        namespace: resources-shield
        path: "/validate"
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURHVENDQWdHZ0F3SUJBZ0lVY2M2bFN0MitUK0NuS3l2eEZLdWtIWEpuR3Frd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0hERWFNQmdHQTFVRUF3d1JVbVZ6YjNWeVkyVnpVMmhwWld4a1EwRXdIaGNOTWpRd09USXlNakl4TVRNNApXaGNOTWprd09USXhNakl4TVRNNFdqQWNNUm93R0FZRFZRUUREQkZTWlhOdmRYSmpaWE5UYUdsbGJHUkRRVENDCkFTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBSitpeC8vbDkyTzQyZ2JmNGlKd3lYMWYKZ3BwK2Qxb3M3NjVzc3piYTlCeHJ2bkhOOUR6K2pJTWM4N3FiUTZ5Vkl6dnRkUjBIOXN2TStsTFpnbkJna3pOMQpnaHB5RGJ3aEFw [...]
